--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "faunadb": "^4.8.0",
     "next": "13.4.1",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
