--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.52.1",
+    "axios": "^1.4.0",
     "faunadb": "^4.8.0",
-    "next": "13.4.1",
+    "next": "^13.4.1",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
