--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prismicio/client": "^4",
     "@stripe/stripe-js": "^1.52.1",
     "axios": "^1.4.0",
     "faunadb": "^4.8.0",
