--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@prismicio/client": "^4",
     "@stripe/stripe-js": "^1.52.1",
+    "@types/prismic-dom": "^2.1.1",
     "axios": "^1.4.0",
     "faunadb": "^4.8.0",
     "next": "^13.4.1",
     "next-auth": "^4.22.1",
+    "prismic-dom": "^2.2.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
